examples/negative/ffi/v2_callback_param.kai
# Negative fixture (#417 / FFI v2): callbacks from C (a function-typed
# parameter) are explicitly out of scope. A kaikai closure is a heap box
# with captures, not a bare C function pointer, so it cannot cross the
# boundary by value. Parser must reject a function-typed extern param.

extern "C" fn register_cb(f: (Int) -> Int) : Int / Ffi

fn main() : Int / Ffi = 0
